--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-3": "^6.24.1",
     "nodemon": "^1.14.12"
+  },
+  "engines": {
+    "node": "4.1.1"
   }
 }
